--- a/netcore1stapi.csproj
+++ b/netcore1stapi.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.1"/>
   </ItemGroup>
 
